feat: added repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=api
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/techevents
+spring.datasource.username=postgres
+spring.datasource.password=Gr1ll0USASk13
+
+aws.region=us-east-1
+aws.bucket.name=techevents-images
